--- a/animation.html
+++ b/animation.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -20,7 +19,8 @@
       position: relative;
       width: 300px;
       height: 300px;
-      background-color: #ebf3ed;
+      background-image: url('data\moba-game-map-plan-vector-21680012.jpg'); /* Update this path to your PNG file */
+      background-size: cover;
       border: 5px solid #333;
       border-radius: 10px;
     }
